# ATIVIDADE-12

./: .gitignore  ATIVIDADE-12.c  CMakeLists.txt  README.md  script.py
libs/include/: config.h  fatfslib.h  font.h  mpu6050.h  tasks.h
libs/src/: fatfslib.c  mpu6050.c  ssd1306.c
libs/src/tasks/: buzzer.c  capturar_dados.c  display.c  gravar_dados.c  leds.c  montar_desmontar.c
